--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,4 +23,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
+      - name: Audit packages (fail if any critical module is identified)
+        run: npm audit --audit-level=critical
+      - name: Install dependencies
+        run: npm ci
